so far + product re-fetch

--- a/similarity_analysis.ipynb
+++ b/similarity_analysis.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -270,57 +270,48 @@
     {
      "data": {
       "text/plain": [
-       "[0.08125752443140973,\n",
-       " 0.08418035664711482,\n",
-       " 0.08471049230957717,\n",
-       " 0.08572306924639782,\n",
-       " 0.09490421607068966,\n",
-       " 0.09610310742401315,\n",
-       " 0.09888906653094279,\n",
-       " 0.10309338499850827,\n",
-       " 0.11219112130519665,\n",
-       " 0.11575702874521299,\n",
-       " 0.11606919200875113,\n",
-       " 0.11961919908903075,\n",
-       " 0.12047141587224015,\n",
-       " 0.12249164852945398,\n",
-       " 0.1252307888935559,\n",
-       " 0.1273432417639753,\n",
-       " 0.12874552394640823,\n",
-       " 0.13010061483301233,\n",
-       " 0.13415534476661178,\n",
-       " 0.13481606573946714,\n",
-       " 0.1350518254670126,\n",
-       " 0.14870098089993758,\n",
-       " 0.15073557285628914,\n",
-       " 0.15355791836801627,\n",
-       " 0.15486953902992615,\n",
-       " 0.15990072051809956,\n",
-       " 0.1616393269183114,\n",
-       " 0.16506548307544766,\n",
-       " 0.1704401742606427,\n",
-       " 0.17254841538315738,\n",
-       " 0.17449490419424216,\n",
-       " 0.17940906916324698,\n",
-       " 0.18033942578217022,\n",
-       " 0.18783448628517618,\n",
-       " 0.20636806708149222,\n",
-       " 0.21031920747208285,\n",
-       " 0.21210899912641143,\n",
-       " 0.22731659139168264,\n",
-       " 0.22917804970967187,\n",
-       " 0.25458938197304437,\n",
-       " 0.2869665764489277,\n",
-       " 0.2869665764489277]"
+       "(2,\n",
+       " defaultdict(<function __main__.<lambda>>,\n",
+       "             {'al': 0.7829175513977109,\n",
+       "              'black': 0.4031426857970508,\n",
+       "              'exclusive': 0.7910229958028407,\n",
+       "              'madina': 0.9825616917597122,\n",
+       "              'purple': 0.7093028242043401,\n",
+       "              'quran': 0.8143252770230706,\n",
+       "              'rainbow': 0.7230755900022638,\n",
+       "              'shafira': 1.3710625319226546,\n",
+       "              'star': 0.661222375750918}))"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted (_.values())"
+    "vectors[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import dill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "1"
    ]
   },
   {
