--- a/similarity_analysis_with_sklearn.ipynb
+++ b/similarity_analysis_with_sklearn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -45,23 +45,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "stemmer = IndonesianStemmer()\n",
-    "tokenizer = nltk.tokenize.RegexpTokenizer(\"[\\w']+\", flags=re.UNICODE)\n",
-    "\n",
-    "def tokenize_and_stem(text):\n",
-    "    global stemmer, tokenizer\n",
-    "    #tokens = nltk.word_tokenize(text, language=\"indonesian\")\n",
-    "    return [stemmer.stem(token) for token in tokenizer.tokenize(text)]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {
     "collapsed": true
@@ -69,10 +52,13 @@
    "outputs": [],
    "source": [
     "def ilines(file_name):\n",
+    "    \"\"\"\n",
+    "    File line iterator\n",
+    "    \"\"\"\n",
     "    with open(file_name) as f:\n",
     "        for line in f:\n",
     "            yield line\n",
-    "        return\n"
+    "        return"
    ]
   },
   {
@@ -91,7 +77,7 @@
     "    min_df=0.01,\n",
     "    stop_words=stopwords,\n",
     "    use_idf=True,\n",
-    "    tokenizer=tokenize_and_stem,\n",
+    "    tokenizer=utils.tokenize_and_stem_ID,\n",
     "    ngram_range=(1,3))"
    ]
   },
@@ -748,15 +734,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokenize' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-b4597845c339>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#this can take some time\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtfidf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTfidfVectorizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstop_words\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'indonesian'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m#tfs = tfidf.fit_transform(token_dict.values())\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tokenize' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#this can take some time\n",
-    "tfidf = TfidfVectorizer(tokenizer=tokenize, stop_words='indonesian')\n",
-    "tfs = tfidf.fit_transform(token_dict.values())"
+    "#tfidf = TfidfVectorizer(tokenizer=utils.tokenize , stop_words='indonesian')\n",
+    "#tfs = tfidf.fit_transform(token_dict.values())"
    ]
   },
   {
