tokenizing with numbers included

--- a/get_sims.ipynb
+++ b/get_sims.ipynb
@@ -30,8 +30,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 712 ms, sys: 20 ms, total: 732 ms\n",
-      "Wall time: 736 ms\n"
+      "CPU times: user 868 ms, sys: 12 ms, total: 880 ms\n",
+      "Wall time: 1.28 s\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -145,8 +145,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.92 s, sys: 220 ms, total: 7.14 s\n",
-      "Wall time: 7.21 s\n"
+      "CPU times: user 7.09 s, sys: 224 ms, total: 7.32 s\n",
+      "Wall time: 7.34 s\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
     "        for i in prod_ids[:-1]:\n",
     "            for j in (p for p in prod_ids if p > i):\n",
     "                try: \n",
-    "                    dist = distance(products[i], products[j])\n",
+    "                    dist = utils.distance(products[i], products[j])\n",
     "                    if dist > 0.3:\n",
     "                        sim.append((i, j, round(dist, 7)))\n",
     "                except Exception as e:\n",
@@ -202,7 +202,28 @@
     "        if sim:\n",
     "            save_sims(cat, sim)\n",
     "        #print \"*** Category:\", cat, \"of\", len(prod_ids), \"products with \", len(sim), \"similarities\"\n",
-    "        del(sim)\n"
+    "        del(sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.36 s, sys: 8 ms, total: 2.37 s\n",
+      "Wall time: 2.38 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "get_sim(categories[:10])"
    ]
   },
   {
@@ -219,17 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 328 ms, sys: 164 ms, total: 492 ms\n",
+      "Wall time: 6min 29s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
     "random.shuffle(categories)\n",
-    "pool = multiprocessing.Pool(processes=8)\n",
-    "pool.map(get_sim, utils.chunks(categories, 8))"
+    "pool = multiprocessing.Pool(processes=4)\n",
+    "pool.map(get_sim, utils.chunks(categories, 4))"
    ]
   },
   {
